fix issues with node-ts
